// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/core/header/components/HeaderFlyout render() should include the header and footer 1`] = `
<Flyout
  className="header-flyout foo"
  closeOnClick={false}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={true}
  isResponsive={false}
  isVisibleByDefault={false}
  offset="-4px 0px"
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={[]}
  position="bottom-left"
>
  <Overlay
    className="header-flyout-overlay"
  >
    <OverlayHeader
      isOverlayHeaderActionEnabled={false}
    >
      <h4
        className="header-flyout-title"
      >
        <span>
          test header
        </span>
      </h4>
    </OverlayHeader>
    <div
      className="header-flyout-list-container"
    >
      <div
        className="flyout-list-container-body with-header with-footer"
      >
        <ScrollWrapper
          scrollRefFn={[Function]}
          shadowSize="contain"
        >
          <span>
            test
          </span>
        </ScrollWrapper>
      </div>
      <div
        className="flyout-list-container-footer"
      >
        <span>
          test footer
        </span>
      </div>
    </div>
  </Overlay>
</Flyout>
`;

exports[`components/core/header/components/HeaderFlyout render() should render default component 1`] = `
<Flyout
  className="header-flyout"
  closeOnClick={false}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={true}
  isResponsive={false}
  isVisibleByDefault={false}
  offset="-4px 0px"
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={[]}
  position="bottom-left"
>
  <Overlay
    className="header-flyout-overlay"
  >
    <OverlayHeader
      isOverlayHeaderActionEnabled={false}
    />
    <div
      className="header-flyout-list-container"
    >
      <div
        className="flyout-list-container-body"
      >
        <ScrollWrapper
          scrollRefFn={[Function]}
          shadowSize="contain"
        >
          <span>
            test
          </span>
        </ScrollWrapper>
      </div>
    </div>
  </Overlay>
</Flyout>
`;

exports[`components/core/header/components/HeaderFlyout render() should render the flyout button in the appropriate order 1`] = `
<Flyout
  className="header-flyout"
  closeOnClick={false}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={true}
  isResponsive={false}
  isVisibleByDefault={false}
  offset="-4px 0px"
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={[]}
  position="bottom-left"
>
  <button
    type="button"
  >
    click me
  </button>
  <Overlay
    className="header-flyout-overlay"
  >
    <OverlayHeader
      isOverlayHeaderActionEnabled={false}
    />
    <div
      className="header-flyout-list-container"
    >
      <div
        className="flyout-list-container-body"
      >
        <ScrollWrapper
          scrollRefFn={[Function]}
          shadowSize="contain"
        >
          <span>
            content here
          </span>
        </ScrollWrapper>
      </div>
    </div>
  </Overlay>
</Flyout>
`;
